--- a/external/CamundaCheckPlagiarism/CamundaCheckPlagiarism/CamundaCheckPlagiarism.csproj
+++ b/external/CamundaCheckPlagiarism/CamundaCheckPlagiarism/CamundaCheckPlagiarism.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,16 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Checker\PlagiarismChecker.cs~RF10229a9.TMP" />
-    <None Remove="Handlers\CheckPlagiarismHandler.cs~RFe49e5e.TMP" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Camunda.Worker" Version="0.13.5" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Update="data.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="smtp-settings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
